--- a/main.html
+++ b/main.html
@@ -10,6 +10,6 @@
     <input type="number" id="ip" />
     <button onclick="startChain()" id="btn">Start</button>
     <div id="output"></div>
-    <script type="text/javascript" src="./script.js"></script>
+    <script defer type="text/javascript" src="./script.js"></script>
   </body>
 </html>
